--- a/funtion/css/styles.css
+++ b/funtion/css/styles.css
@@ -182,6 +182,7 @@ img{
   height: calc(100vh - var(--header-height));
   row-gap: 5rem;
 
+
 }
 .home__title{
   align-self: flex-end;
@@ -200,14 +201,14 @@ img{
 .home__scroll-link{
   writing-mode: vertical-lr;
   transform: rotate(-180deg);
-  columns: var(--white-color);
+  color: var(--white-color);
 
 }
 .home__img{
   position: absolute;
   right: 0;
   bottom: 0;
-  width: 250px;
+  width: 310px;
 }
 /*====== ABOUT ====*/
 .about__container{
@@ -239,13 +240,22 @@ img{
   margin-bottom: var(--mb-4);
 
 }
-.about__social-icon{
-  font-size: 1.4rem;
-  margin: 0 var(--mb-1);
+/*==== imput ====*/
+.cv__button{
+  display: block;
+  background-color: var(--first-color);
+  color: var(--white-color);
+  padding: .75rem 2.5rem;
+  margin-left: 0%;
+  border-radius: .5rem;
+  border: none;
+  outline: none;
+  font-size: var(--normal-font-size);
+  cursor: pointer;
 }
-.about__social-icon:hover{
-  color: var(--first-color);
-}
+ 
+
+
 /*======  ====*/  
 /*======  ====*/  
 /*======  ====*/  
