--- a/funtion/css/styles.css
+++ b/funtion/css/styles.css
@@ -166,7 +166,7 @@ img{
   position: absolute;
   content: "";
   width: 100%;
-  height: .18rem;
+  height: .20rem;
   left: 0;
   top: 2rem;
   background-color: var(--first-color);
@@ -246,17 +246,43 @@ img{
   background-color: var(--first-color);
   color: var(--white-color);
   padding: .75rem 2.5rem;
-  margin-left: 0%;
+  margin-right: 10%;
+  margin-left: 10%;
   border-radius: .5rem;
   border: none;
   outline: none;
   font-size: var(--normal-font-size);
   cursor: pointer;
+  text-align: center;
 }
  
-
-
-/*======  ====*/  
+/*==== skills  ====*/  
+.skills__container{
+  row-gap: 2rem;
+}
+.skills__subtitle{
+  color: var(--first-color);
+  margin-bottom: var(--mb-3);
+}
+.skills__name{
+  display: inline-block;
+  font-size: var(--small-font-size);
+  margin-right: var(--mb-2);
+  margin-bottom: var(--mb-3);
+  padding: .25rem .5rem;
+  background-color: var(--white-color);
+  border-radius: .25rem;
+}
+.skills__name:hover{
+  background-color: var(--first-color);
+  color: var(--white-color);
+}
+.skills__img img{
+  border-radius: .5rem; 
+  right: 0;
+  bottom: 0;
+  width: 400px;
+}
 /*======  ====*/  
 /*======  ====*/  
 /*======  ====*/  
