--- a/funtion/css/styles.css
+++ b/funtion/css/styles.css
@@ -125,7 +125,7 @@ img{
   align-items: center;
 }
 @media screen and (max-width: 768px){
-  .nav_menu{
+  .nav__menu{
     position: fixed;
     top: var(--header-height);
     right: -100%;
@@ -138,20 +138,22 @@ img{
   }
 }
 
-.nav_item{
+.nav__item{
   margin-bottom: var(--mb-4);
 }
-.nav_link{
+.nav__link{
   position: relative;
   color: var(--dark-color);
 }
-.nav_link:hover{
-  color: var(--first-color);
-}
-.nav_logo{
+.nav__link:hover{
   color: var(--white-color);
 }
-.nav_toggle{
+.nav__logo{
+  font-size: var(--normal-font-size);
+  color: var(--white-color);
+  margin-bottom: var(--mb-2);
+}
+.nav__toggle{
   color: var(--white-color);
   font-size: 1.5rem;
   cursor: pointer;
@@ -283,9 +285,89 @@ img{
   bottom: 0;
   width: 400px;
 }
-/*======  ====*/  
-/*======  ====*/  
-/*======  ====*/  
+/*===== portfolio  ====*/  
+.portfolio{
+  background-color: var(--white-color);
+}
+.portfolio__container{
+  justify-items: center;
+  row-gap: 2rem;
+}
+.portfolio__img{
+  position: relative;
+  overflow: hidden;
+}
+.portfolio__img img{
+  border-radius: .5rem; 
+  right: 0; bottom: 0;
+  width: 400px;
+}
+.portfolio__link{
+  position: absolute;
+  bottom: -100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255,255,255,.3);
+  border-radius: .5rem;
+  cursor: pointer;
+  backdrop-filter: blur(10px);
+  transition: .3s;
+}  
+.portfolio__img:hover .portfolio__link{
+  bottom: 0;
+}
+.portfolio__link-name{
+  color: var(--dark-color);
+}
+/*===== Contact  ====*/ 
+
+.contact__container{
+    justify-items: center;
+    row-gap: 2rem;
+    text-align: center;
+}
+.contact__subtitle{
+    font-size: var(--h2-font-size);
+    color: var(--first-color);
+    margin-bottom: var(--mb-1);
+    text-align: center;
+}
+.contact__social-icon{
+    font-size: 1.4rem;
+    margin: 0 var(--mb-1);
+}
+.contact__social-icon:hover{
+    color: var(--first-color);
+}
+
+/*===== Footer  ====*/ 
+.footer{
+  background-color: var(--dark-color);
+}
+.footer__container{
+  row-gap: 2rem;
+}
+.footer__title{
+  font-size: var(--normal-font-size);
+  color: var(--white-color);
+  margin-bottom: var(--mb-2);
+}
+.footer__link{
+  padding: .25rem 0;
+}
+.footer__link:hover{
+  color: var(--first-color);
+}
+.footer__social{
+  font-size: 1.4rem;
+  margin-right: var(--mb-1);
+}
+.footer__social:hover{
+  color: var(--first-color);
+}
 /*======  ====*/  
 /*======  ====*/  
 /*======  ====*/  
