--- a/funtion/css/styles.css
+++ b/funtion/css/styles.css
@@ -208,9 +208,10 @@ img{
 }
 .home__img{
   position: absolute;
+  height:350px;
   right: 0;
   bottom: 0;
-  width: 310px;
+  width: 295px;
 }
 /*====== ABOUT ====*/
 .about__container{
@@ -247,9 +248,9 @@ img{
   display: block;
   background-color: var(--first-color);
   color: var(--white-color);
-  padding: .75rem 2.5rem;
-  margin-right: 10%;
-  margin-left: 10%;
+  padding: .20rem 2.5rem;
+  margin-right: 5%;
+  margin-left: 5%;
   border-radius: .5rem;
   border: none;
   outline: none;
@@ -368,6 +369,143 @@ img{
 .footer__social:hover{
   color: var(--first-color);
 }
-/*======  ====*/  
-/*======  ====*/  
-/*======  ====*/  
+
+
+
+/* ===== MEDIA QUERIES =====*/
+/* For small devices */
+
+@media screen and (max-width: 320px) {
+  .home__img {
+    width: 230px;
+  }
+}
+@media screen and (min-width: 768px){
+    body{
+        margin: 0;
+    }
+    .section{
+        padding-top: 4rem;
+    }
+    .section-title{
+        margin-bottom: 3rem;
+    }
+    .section-title::after{
+        width: 64px;
+        top: 3rem;
+    }
+
+    .nav{
+        height: calc(var(--header-height) + 1rem);
+    }
+    .nav__list{
+        display: flex;
+    }
+    .nav__item{
+        margin-left: var(--mb-4);
+        margin-bottom: 0;
+    }
+    .nav__toggle{
+        display: none;
+    }
+    .nav__link{
+        color: var(--white-color);
+    }
+    .nav__link:hover{
+        color: var(--white-color);
+    }
+    .active::after{
+        background-color: var(--white-color);
+    }
+
+    .home__container{
+        height: 100vh;
+        grid-template-rows: 1.7fr 1fr;
+        row-gap: 0;
+    }
+    
+    .home__img{
+      width: 530px;
+      right: 5%;
+      height: 550px;
+      left: 45%;
+    }
+
+    .about__container{
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        text-align: initial;
+        padding: 4rem 0;
+    }
+    .about__img{
+        width: 200px;
+        height: 200px;
+    }
+    .about__img img{
+        width: 165px;
+    }
+    .cv__button{
+      grid-template-columns: repeat(1, 1fr);
+      display: block;
+      background-color: var(--first-color);
+      color: var(--white-color);
+      padding: .10rem 3rem;
+      margin-right: 18%;
+      margin-left: 18%;
+      border-radius: .10rem;
+      border: none;
+      outline: none;
+      font-size: var(--normal-font-size);
+      cursor: pointer;
+      align-items: center;
+
+    }
+
+    .skills__container{
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+    }
+
+    .portfolio__container{
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+
+    .contact__container{
+        grid-template-columns: repeat(1, 1fr);
+        align-items: center;
+    }
+    .contact__social{
+      grid-template-columns: repeat(1, 1fr);
+      align-items: center;
+    }
+    .contact__social-icon{
+       font-size: 1.4rem;
+       margin: 0 var(--mb-1);
+       align-items: center;
+    }
+
+    .footer__container{
+        grid-template-columns: repeat(3, 1fr);
+        justify-items: center;
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .bd-grid{
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+/* For tall screens on mobiles y desktop*/
+@media screen and (min-height: 721px) {
+    .home__container {
+        height: 640px;
+    }
+    .home__img {
+        width: 500px;
+        right: 24%;
+    }
+}
