--- a/my-cv/herram/styles.css
+++ b/my-cv/herram/styles.css
@@ -258,13 +258,16 @@ img{
 }
 
 /*========== EDUCATION AND EXPERIENCE ==========*/
-.education__content{
+.education__content,
+.experience__content{
   display: flex;
 }
-.education__time{
+.education__time,
+.experience__time{
   padding-right: 1rem;
 }
-.education__rounder{
+.education__rounder,
+.experience__rounder{
   position: relative;
   display: block;
   width: 16px;
@@ -273,20 +276,24 @@ img{
   border-radius: 50%;
   margin-top: .25rem;
 }
-.education__line{
+.education__line,
+.experience__line{
   display: block;
   width: 2px;
-  height: 110%;
+  height: 104%;
   background-color: var(--text-color-light);
   transform: translate(7px, 0);
 }
-.education__data{
+.education__data,
+.experience__data{
   gap: .5rem;
 }
-.education__title{
+.education__title,
+.experience__title{
   font-size: var(--h3-font-size);
 }
-.education__studies{
+.education__studies,
+.experience__company{
   font-size: var(--small-font-size);
   color: var(--title-color);
 }
@@ -294,7 +301,25 @@ img{
   font-size: var(--smaller-font-size);
 }
 /*========== SKILLS AND LANGUAGES ==========*/
-
+.skills__content{
+  grid-template-columns: repeat(2, 1fr);
+}
+.skills__content{
+  gap: 0;
+}
+.skills__name{
+  display: flex;
+  align-items: center;
+  margin-bottom: var(--mb-3);
+}
+.skills__circle{
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  background-color: var(--text-color);
+  border-radius: 50%;
+  margin-right: .75rem;
+}
 
 /*========== CERTIFICATES ==========*/
 
