--- a/my-cv/herram/styles.css
+++ b/my-cv/herram/styles.css
@@ -301,18 +301,21 @@ img{
   font-size: var(--smaller-font-size);
 }
 /*========== SKILLS AND LANGUAGES ==========*/
-.skills__content{
+.skills__content,
+.languages__content{
   grid-template-columns: repeat(2, 1fr);
 }
-.skills__content{
+.languages__content{
   gap: 0;
 }
-.skills__name{
+.skills__name,
+.languages__name{
   display: flex;
   align-items: center;
   margin-bottom: var(--mb-3);
 }
-.skills__circle{
+.skills__circle,
+.languages__circle{
   display: inline-block;
   width: 5px;
   height: 5px;
@@ -322,13 +325,41 @@ img{
 }
 
 /*========== CERTIFICATES ==========*/
-
+.certificate__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-1);
+}
 
 /*========== REFERENCES ==========*/
-
+.references__content{
+  gap: .25rem;
+}
+.refernces__subtitle{
+  color: var(--text-color-light);
+}
+.references__subtitle,
+.refernces__contact{
+  font-size: var(--smaller-font-size);
+}
+.references__title{
+  font-size: var(--h3-font-size);
+}
 
 /*========== INTERESTS ==========*/
-
+.interests__container{
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: var(--mb-2);
+}
+.interests__content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.interests__icon{
+  font-size: 1.5rem;
+  color: var(--text-color-light);
+  margin-bottom: .25rem;
+}
 
 /* Scroll top */
 
