--- a/my-cv/herram/styles.css
+++ b/my-cv/herram/styles.css
@@ -228,7 +228,7 @@ img{
   justify-content: space-between;
   align-items: center;
 }
-@media screen and (max-width: 968px){
+@media only screen and (max-width:968px){
   .nav__menu{
     position: fixed;
     bottom: -100%;
@@ -489,7 +489,7 @@ img{
 
 /*========== MEDIA QUERIES ==========*/
 /* For small devices, menu two columns */
-@media screen and (max-width: 320px){
+@media only screen and (max-width:320px){
   .nav__list{
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem .5rem;
@@ -497,7 +497,7 @@ img{
 }
 
 /* Classes modified for large screen size */
-@media screen and (min-width: 968px){
+@media only screen and (min-width:968px){
   body{
     margin: 3rem 0;
   }
