--- a/my-cv/herram/styles.css
+++ b/my-cv/herram/styles.css
@@ -357,18 +357,22 @@ img{
 /*========== PROFILE ==========*/
 .profile__description{
   text-align: center;
+  gap: .5rem;
 }
 
-/*========== EDUCATION AND EXPERIENCE ==========*/
+/*========== EDUCATION AND EXPERIENCE AND REFERENCES==========*/
 .education__content,
+.references__content,
 .experience__content{
   display: flex;
 }
 .education__time,
+.references__time,
 .experience__time{
   padding-right: 1rem;
 }
 .education__rounder,
+.references__rounder,
 .experience__rounder{
   position: relative;
   display: block;
@@ -379,6 +383,7 @@ img{
   margin-top: .25rem;
 }
 .education__line,
+.references__line,
 .experience__line{
   display: block;
   width: 2px;
@@ -387,28 +392,34 @@ img{
   transform: translate(7px, 0);
 }
 .education__data,
+.references__data,
 .experience__data{
   gap: .5rem;
 }
 .education__title,
+.references__title,
 .experience__title{
   font-size: var(--h3-font-size);
 }
 .education__studies,
+.references__studies,
 .experience__company{
   font-size: var(--small-font-size);
   color: var(--title-color);
 }
+.references__year,
 .education__year{
   font-size: var(--smaller-font-size);
+}
+/*========== CERTIFICATES ==========*/
+.certificate__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-1);
 }
 /*========== SKILLS AND LANGUAGES ==========*/
 .skills__content,
 .languages__content{
-  grid-template-columns: repeat(2, 1fr);
-}
-.languages__content{
-  gap: 0;
+  grid-template-columns: repeat(3, 1fr);
 }
 .skills__name,
 .languages__name{
@@ -425,28 +436,6 @@ img{
   border-radius: 50%;
   margin-right: .75rem;
 }
-
-/*========== CERTIFICATES ==========*/
-.certificate__title{
-  font-size: var(--h3-font-size);
-  margin-bottom: var(--mb-1);
-}
-
-/*========== REFERENCES ==========*/
-.references__content{
-  gap: .25rem;
-}
-.refernces__subtitle{
-  color: var(--text-color-light);
-}
-.references__subtitle,
-.references__contact{
-  font-size: var(--smaller-font-size);
-}
-.references__title{
-  font-size: var(--h3-font-size);
-}
-
 /*========== INTERESTS ==========*/
 .interests__container{
   grid-template-columns: repeat(3, 1fr);
@@ -527,7 +516,8 @@ img{
   }
   .section-title,
   .profile__description{
-    text-align: initial;
+    text-align: center;
+    gap: 3.5rem;
   }
   .home__container{
     gap: 1.5rem;
@@ -535,16 +525,20 @@ img{
   .home__button-movil{
     display: none;
   }
-  .references__container{
-    grid-template-columns: repeat(2, 1fr);
-  }
   .languages__content{
     grid-template-columns: repeat(3, max-content);
+    column-gap: 3.5rem;
+  }
+  .references__container{
+    grid-template-columns: repeat(1, 1fr);
     column-gap: 3.5rem;
   }
   .interests__container{
     grid-template-columns: repeat(4, max-content);
     column-gap: 3.5rem;
   }
+  .skills__container{
+    grid-template-columns: repeat(3, max-content);
+    column-gap: 3.5rem;
+  }
 }
-
