--- a/my-cv/herram/styles.css
+++ b/my-cv/herram/styles.css
@@ -129,7 +129,7 @@ body.scale-cv{
   font-size: 1rem;
 }
 .scale-cv .references__container{
-  height: 82px;
+  height: 5px;
 
 }
 .scale-cv .education__container,
@@ -341,7 +341,7 @@ img{
 }
 /*========== SOCIAL ==========*/
 .social__container{
-  grid-template-columns: max-content;
+  grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
 }
 .social__link{
